third_party/move/move-compiler-v2/tests/more-v1/parser/control_exp_associativity_else_after_if_block.exp

Diagnostics:
error: unexpected token
   ┌─ tests/more-v1/parser/control_exp_associativity_else_after_if_block.move:13:28
   │
13 │         if (cond) { s1 }.f else s2.f
   │                            ^^^^
   │                            │
   │                            Unexpected 'else'
   │                            Expected ';'
